2007-06-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add tags when showing fragment source.

2007-05-31  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php: Add support for cut and paste on mozilla/firefox
	browsers.

2007-05-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- Supply the cache dir to scorerender_remove_cache() as argument, so
	this function becomes more generic.
	- Also show error in dashboard if cache dir is not readable.

2007-05-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	scorerender_process_result() --> scorerender_process_content(), and
	drop one redundant parameter.

2007-05-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: More phpdoc comments.

2007-05-29  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, class.*.inc.php:
	- Add option to limit image width.

	* wp-scorerender.php:
	- Some phpdoc stuff.
	- Merge scorerender_generate_html_error() into
	scorerender_process_result().

2007-05-19  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add option to allow displaying warning about IE
	incapable of rendering transparent PNG.

2007-05-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Add nonce protection.

2007-05-17  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Split admin page into smaller trunks.

2007-05-11  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php: Tidy up form label.

2007-05-11  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php: Replace popup with form
	opened in new window in order to use $_POST instead, as IE
	chops $_GET values at 2000 chars.

2007-05-09  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, wp-scorerender.php: Fix for popup window showing
	plus sign as space.

2007-05-08  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, showcode.css: Use CSS.
	* class.*.inc.php: Rename to lower case class name, for easier string
	concatenation.