@@ -1,3 +1,8 @@
+2007-06-07  Abel Cheung  <abelcheung@gmail.com>
+
+	* wp-scorerender.php: Set start/end tag, regex etc as static variable
+	instead of computed on the fly.
+
 2007-06-05  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php: Add tags when showing fragment source.
